--- a/css/theme_dark.css
+++ b/css/theme_dark.css
@@ -63,13 +63,15 @@
     
     /*基本共同設定*/
     
-    body {
-        background-image: none;
-        background-image: url("http://www.nwaction.com/metroalbum/images/bg1.jpg");
+    /*#BH-background {
+        background-image: url("https://raw.githubusercontent.com/hollen9/GamerBahamutThemes/7efb9ed699c746e3a4173b29220fbbc6cfcfae1b/images/tile_blurblack.png");
         background-color: #1E2124;
+        background-size: 900px 900px;
+    }*/
+    
+    body {
         font-family:"Noto Sans CJK TC DemiLight",sans-serif;
         color: #C0C1C2;
-        
     }
     a:hover {
         color: #A6DBFF;
